--- a/IT1 Proskekt/Ali.css
+++ b/IT1 Proskekt/Ali.css
@@ -10,15 +10,17 @@ header {
   justify-content: center;
   align-items: center;
   background-color: #000000;
-  padding: 20px;
+  padding: 20px 0;
 }
-T #navigasjon {
+
+#navigasjon {
   position: relative;
   display: flex;
   align-items: center;
-  width: 100%;
+  width: 100%; 
   padding: 0 20px;
 }
+
 
 /* Logo */
 #logo-knapp img {
@@ -53,13 +55,13 @@ T #navigasjon {
   display: none;
   position: fixed; /* Gjør at dropboksen følger språk-knappen */
   top: 75px;
-  right: 20px;
+  right: 20px; 
   background-color: white;
   border: 2px solid black;
   border-radius: 10px;
   width: 150px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
-  z-index: 3;
+  z-index: 3; 
 }
 
 .språk-dropboks ul {
@@ -87,6 +89,8 @@ T #navigasjon {
 #språk-toggle:checked + label + .språk-dropboks {
   display: block;
 }
+
+
 
 /* Horisontal linje */
 .horisontal-linje {
@@ -122,7 +126,7 @@ T #navigasjon {
   border-radius: 25px;
   margin-left: 125px;
   background-color: white;
-  position: relative;
+  position: relative; 
   word-wrap: break-word; /* Bryter lange ord for å holde dem inne i boksen */
   overflow-wrap: break-word;
 }
@@ -131,18 +135,19 @@ T #navigasjon {
   width: 410px;
   height: 150px;
   position: absolute;
-  top: 20px;
+  top: 20px; 
   left: 20px;
   border: 2px solid black;
   border-radius: 25px;
   background-color: white;
-  z-index: 1;
+  z-index: 1; 
   overflow-y: auto; /* Scroll når teksten blir for lang */
 }
 
+
 .firkant-tekst {
   position: absolute;
-  top: 20px;
+  top: 20px; 
   left: 30px;
   right: 30px;
   font-family: Arial, sans-serif;
@@ -152,7 +157,7 @@ T #navigasjon {
   padding: 0px;
   text-align: auto;
   z-index: 2;
-}
+ }
 
 .liten-firkant-inne-i-firkant {
   width: 190px;
@@ -160,34 +165,36 @@ T #navigasjon {
   border: 2px solid black;
   border-radius: 25px;
   position: absolute;
-  top: 490px;
-  left: 365px;
+  top: 490px; 
+  left: 365px; 
   background-color: white;
-  z-index: 1;
+  z-index: 1; 
   overflow-y: auto;
 }
 
 .liten-firkant-tekst {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 10px; 
+  left: 10px; 
   font-family: Arial, sans-serif;
   font-size: 0.9rem;
   line-height: 1.4;
   color: #000000;
   text-align: auto;
-  padding: 5px;
-  z-index: 2;
+  padding: 5px; 
+  z-index: 2; 
 }
+
 
 .bilde-for-firkant {
   width: 200px;
   height: auto;
   border-radius: 25px;
-  position: absolute;
-  top: 485px;
-  left: 150px;
+  position: absolute; 
+  top: 485px; 
+  left: 150px; 
 }
+
 
 .fordeler-firkant {
   width: 200px;
@@ -224,20 +231,20 @@ T #navigasjon {
   margin-bottom: 0px;
   margin-top: 20px;
   background-color: white;
-  position: relative;
+  position: relative; 
 }
 
 .fordeler-tekst {
   position: absolute;
-  top: 10px;
+  top: 10px; 
   left: 10px;
   font-family: Arial, sans-serif;
   font-size: 0.9rem;
   line-height: 1.4;
   color: #000000;
   text-align: auto;
-  padding: 5px;
-  z-index: 2;
+  padding: 5px; 
+  z-index: 2; 
 }
 
 .ulemper-firkant-stor {
@@ -248,7 +255,7 @@ T #navigasjon {
   margin-left: 920px;
   margin-top: -365px;
   background-color: white;
-  position: relative;
+  position: relative; 
 }
 
 .ulemper-tekst {
@@ -260,9 +267,10 @@ T #navigasjon {
   line-height: 1.4;
   color: #080808;
   text-align: auto;
-  padding: 5px;
-  z-index: 2;
-}
+  padding: 5px; 
+  z-index: 2; 
+  }
+
 
 .laaaang-firkant {
   width: 900px;
@@ -279,31 +287,31 @@ T #navigasjon {
   height: 374px;
   position: absolute;
   top: 898px;
-  left: 756px;
+  left: 756px; 
   border: 2px solid black;
   border-radius: 25px;
   background-color: white;
-  z-index: 1;
+  z-index: 1; 
   overflow: hidden; /* Hindrer teksten i å gå utenfor boksen */
 }
 
 .firkant-ved-video-tekst {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 10px; 
+  left: 10px; 
   font-family: Arial, sans-serif;
-  font-size: 0.9rem;
+  font-size: 0.9rem; 
   line-height: 1.4;
   color: #333;
   text-align: auto;
-  padding: 5px;
-  z-index: 2;
-  overflow-y: auto;
+  padding: 5px; 
+  z-index: 2; 
+  overflow-y: auto; 
 }
 
 .video {
-  display: flex;
-  justify-content: center;
-  margin: -400px;
-  margin-left: -670px;
+    display: flex;
+    justify-content: center;
+    margin: -400px; 
+    margin-left: -670px;
 }
